--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -2,21 +2,23 @@
     <div class="bg-light-blue">
         <div class="container mt-0 pt-5">
             <div class="row">
-                <div class="col-sm-5 pb-5">
-                    <p class="m-0">LM0001</p>
-                    <h3 class="text-left f-bold">Jersey Miki’s Subs
-                        Season offer</h3>
-                    <h5 class="clr-blue-light f-bold pb-3">15% off on hot subs</h5>
-                    <p> Established in 2010, United Finance is an European multi-national company providing
+                <div class="col-sm-5 pb-5" *ngFor="let item of lmOffer">
+                    <p class="m-0">{{item.lmid}}</p>
+                    <h3 class="text-left f-bold">{{item.lmname}}</h3>
+                    <h5 class="clr-blue-light f-bold pb-3">{{item.lmofferValue}} {{item.lmofferType}}</h5>
+                    <p>
+                        <!-- {{item.lmdescription}} -->Established in 2010, United Finance is an European multi-national
+                        company providing
                         product as a service. Amid the constant change in technology and every companies' desire to
                         equip with the latest products, comes the monetary constraint.</p>
                     <div>
                         <a class="btn-clr-blue-save">
-                           Save</a>
+                            Save</a>
                     </div>
                 </div>
                 <div class="col-sm-7">
-                    <img class="img-fluid position-absolute mt-30" src="assets/images/products/coupon.png" alt="coupon" />
+                    <img class="img-fluid position-absolute mt-30" src="assets/images/products/coupon.png"
+                        alt="coupon" />
                 </div>
             </div>
         </div>
@@ -27,13 +29,13 @@
                 <h5 class="col-sm-12 ltr-space f-bold">Description</h5>
                 <div class="col-sm-12">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6" *ngFor="let item of lmOffer">
                             <div class="row py-2">
                                 <div class="col-sm-6 ltr-space">
                                     LM Name
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    Jersey Mike's
+                                    {{item.lmname}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -41,7 +43,7 @@
                                     LM Description
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    Subs Restaurant
+                                    {{item.lmdescription}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -49,7 +51,7 @@
                                     LM Offer Type
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    % off
+                                    {{item.lmofferType}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -57,7 +59,7 @@
                                     LM Offer Value
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    15
+                                    {{item.lmofferValue}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -73,7 +75,7 @@
                                     Offer Region
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    Montgomerry VA
+                                    {{item.offerRegion}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -81,7 +83,7 @@
                                     Offer Start Date
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    12/1/2019
+                                    {{item.offerStartDate}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -89,7 +91,7 @@
                                     Offer Expiry
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    12/31/2019
+                                    {{item.offerExpiryDate}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -97,7 +99,7 @@
                                     Offer Terms & Conditions
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    Valid on hot subs only
+                                    {{item.offerTermsandConditions}}
                                 </div>
                             </div>
                             <div class="row py-2">
@@ -105,7 +107,7 @@
                                     Offer Currency
                                 </div>
                                 <div class="col-sm-6 ltr-space f-bold">
-                                    US $
+                                    {{item.offerCurrency}}
                                 </div>
                             </div>
                         </div>
