--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,7 +3,8 @@
     <div class="col-md-12 text-center pb-80">
       <span class="f-18 mr-10">Make</span>
       <h3 class="d-inline f-bold f-28"> Your Brand known to All</h3>
-      <p class="f-18">Partner with us today & increase your reach <span [routerLink]="['/Login']" class="cursor-pointer f-bold clr-blue">Click Here</span></p>
+      <p class="f-18">Partner with us today & increase your reach <span [routerLink]="['/Login']"
+          class="cursor-pointer f-bold clr-blue">Click Here</span></p>
     </div>
     <div class="row m-0">
       <div class="col-md-6">
@@ -12,28 +13,52 @@
       <div class="col-md-6">
         <div class="panel panel-default cus-bg">
           <div class="partner-login">
-            <h3 class="title-partner">Partner Sign Up</h3>
+            <h3 class="title-partner">Consumer Sign Up</h3>
             <p class="f-15">Quick 4 step form, helping you save your time</p>
           </div>
           <div class="panel-body">
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <div class="col-sm-12">
-                    <input class="form-control inpt" id="Email" placeholder="Email"
-                    required="" type="email">
+                  <input type="fname" class="form-control inpt" formControlName="firstName" id="inputfName"
+                    [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" placeholder="First name">
+                  <span class="invalid-feedback cust-feedback-align" *ngIf="f.firstName.errors?.required">Enter your
+                    name</span>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input class="form-control inpt" id="Password" placeholder="Password"
-                    required="" type="Password">
+                  <input type="lname" class="form-control inpt" formControlName="lastName" id="inputlName"
+                    [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" placeholder="Last name">
+                  <span class="invalid-feedback cust-feedback-align" *ngIf="f.lastName.errors?.required">Enter your
+                    name</span>
                 </div>
               </div>
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <input type="email" class="form-control inpt" formControlName="emailId" id="inputEmail"
+                    [ngClass]="{ 'is-invalid': submitted && f.emailId.errors }" placeholder="Enter your email">
+                  <span class="invalid-feedback cust-feedback-align" *ngIf="f.emailId.errors?.required">Enter proper email
+                    id</span>
+
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <input type="password" class="form-control inpt" formControlName="password" id="inputPassword"
+                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password">
+                  <span class="invalid-feedback cust-feedback-align" *ngIf="f.password.errors?.required">Enter valid
+                    password</span>
+                </div>
+              </div>
+             <!--  <span class="invalid-feedback cust-feedback-align" *ngIf="f.emailAlredyExist.errors?.required">Enter valid
+                password</span> -->
               <div class="form-group last">
                 <div class="col-sm-12">
-                  <button type="submit" [routerLink]="['/home']" class="col-sm-12 btn-clr-blue btn btn-sm">
+                  <button type="submit" class="col-sm-12 btn-clr-blue btn btn-sm">
                     Sign in</button>
-                    <p class="text-center pt-3">Already a member?<a [routerLink]="['/Login']" class="cursor-pointer f-bold clr-blue">Click Here</a></p>
+                  <p class="text-center pt-3">Already a member?<a [routerLink]="['/Login']"
+                      class="cursor-pointer f-bold clr-blue">Click Here</a></p>
                 </div>
               </div>
             </form>
