--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -31,19 +31,18 @@
                                         </th>
                                         <th scope="row" class="border-0">
                                             <div class="p-2">
-                                                <img src="https://res.cloudinary.com/mhmd/image/upload/v1556670479/product-1_zrifhn.jpg"
+                                            <img src="{{item.offers.webOfferImage1}}"
                                                     alt="" width="70" class="img-fluid rounded shadow-sm">
                                                 <div class="ml-3 d-inline-block align-middle">
                                                     <h5 class="mb-0"> <a href="#"
-                                                            class="text-dark d-inline-block align-middle">Jersey Mike’s
-                                                            Subs</a></h5><span
+                                                    class="text-dark d-inline-block align-middle">{{item.offers.lmname}}</a></h5><span
                                                         class="text-muted font-weight-normal font-italic d-block">Category:
                                                         Watches</span>
                                                 </div>
                                             </div>
                                         </th>
                                         <td class="border-0 align-middle clr-blue-light">
-                                            <h3><strong>$79.00</strong></h3>
+                                        <h3><strong>${{item.offers.lmofferValue}}</strong></h3>
                                             <p class="f-bold">OFF</p>
                                         </td>
                                     </tr>
